syntax="proto3";

option go_package="/pb";

service AccountService {
  rpc GetAccountList(PagingRequest) returns (AccountListRes) {};
  rpc GetAccountByMobile(MobileRequest) returns (AccountRes) {} ;
  rpc GetAccountById(IdRequest) returns (AccountRes) {};
  rpc AddAccount(AddAccountRequest) returns (AccountRes) {};
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountRes) {};
  rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordRes) {};
}

message PagingRequest {
  uint32 page = 1;
  uint32 pageSize = 2;
}

message AccountRes {
  int32 id = 1;
  string mobile = 2;
  string password = 3;
  string nickname = 4;
  string gender = 5;
  uint32 role = 6;
}

message AccountListRes {
  int32 total = 1;
  repeated AccountRes accountList = 2;
}


message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  uint32 id =1;
}


message AddAccountRequest {
  string mobile = 1;
  string password = 2;
  string nickname = 3;
  string gender = 4;
}

message UpdateAccountRequest {
  int32 id = 1;
  string mobile = 2;
  string password = 3;
  string nickname = 4;
  string gender = 5;
  uint32 role = 6;
}

message UpdateAccountRes {
  bool result = 1;
}

message CheckPasswordRequest {
  string password=1;
  string hashedPassword=2;
  uint32 id=3;
}


message CheckPasswordRes {
  bool result = 1;
}